# watchclaw

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONFIG-SCHEMA.md  EVENT-MODEL.md  INSTALLATION.md  LIVING-TECHNICAL-DOCUMENT.md  STATE-SCHEMA.md  STATUS.md  TASKS.md  TELEGRAM-DELIVERY.md  TELEGRAM-MESSAGE-LAYER.md  watchclaw-state.md
examples/: config.sample.json
scripts/: install.sh  upgrade.sh
src/sentinel_claw/: cli.py
src/watchclaw/: audit.py  auth.py  cli.py  config.py  delivery.py  engine.py  files.py  inspect.py  listeners.py  models.py  runtime.py  telegram.py
systemd/: sentinel-claw.service  watchclaw.service  watchclaw.timer
tests/: test_auth.py  test_cli.py  test_config.py  test_delivery.py  test_engine.py  test_files.py  test_install_assets.py  test_listeners.py  test_telegram.py
